--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-paystack": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0"
