get current invoice format settings

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_BASE_URL=https://sheetdb.io/api/v1/r2uot7iu8cmy2
+
+VITE_CREDO_BASE_URL=https://api.credodemo.com
+VITE_CREDO_PUBLIC_KEY=0PUB0123ihAAnq0wgh837f4VE4G9lixZ
+VITE_CREDO_SECRET_KEY=0PRI0123o1dYSEfT2eu6p5QCk6kZNU11
